# STM32_WB55_BLE_V2

./: .gitignore  .mxproject  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  STM32_WB55_BLE_V2.ioc  build_and_flash.bat  memory.md  stm32wb55xx_flash_cm4.ld
App/BLE_Gateway/: CHANGES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md
App/BLE_Gateway/Inc/: at_command.h  ble_connection.h  ble_device_manager.h  ble_event_handler.h  ble_gatt_client.h  circular_buffer.h  debug_trace.h  module_execute.h
App/BLE_Gateway/Src/: at_command.c  ble_connection.c  ble_device_manager.c  ble_event_handler.c  ble_gatt_client.c  circular_buffer.c  debug_trace.c  module_execute.c
Inc/: app_ble.h  app_conf.h  ble_conf.h  ble_dbg_conf.h  hw_conf.h  main.h  p2p_client_app.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  tl_dbg_conf.h
Middlewares/ST/STM32_WPAN/utilities/: dbg_trace.c
Src/: app_ble.c  app_entry.c  hw_ipcc.c  hw_uart.c  main.c  p2p_client_app.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c  usbd_conf.c
cmake/stm32cubemx/: CMakeLists.txt
